--- a/style.css
+++ b/style.css
@@ -49,6 +49,23 @@ h2 {
 }
 
 .form-control input {
-  border: 2px solid #0f0f0f;
+  border: 2px solid #f0f0f0;
+  border-radius: 0.5em;
+  display: block;
+  width: 100%;
+  padding: 1em;
+  font-size: 0.75em;
+}
 
+.form-control input:focus {
+  outline: 0;
+  border-color: goldenrod;
+}
+
+.form-control.success input {
+  border-color: green;
+}
+
+.form-control.failure input {
+  border-color: red;
 }
