final styling button and small tag visibility

--- a/style.css
+++ b/style.css
@@ -77,5 +77,29 @@ h2 {
 }
 
 .form-control small {
-  color: var(--failure-color)
+  color: var(--failure-color);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  visibility: hidden;
+  /* display: none; */
+}
+
+.form-control.failure small {
+  visibility: visible;
+}
+
+/* This piece here dictates whether the small tag will show. If it has an .failure class attached to it, it will become visible due to lines 88 to 90. */
+
+.form button {
+  cursor: pointer;
+  background-color: gold;
+  border: .5em solid gold;
+  border-radius: .75em;
+  color: darkblue;
+  font-size: 1em;
+  padding: .25em;
+  margin-top: 1em;
+  width: 100%;
+
 }
